2006-07-17  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/28238
	* tree-inline.c (copy_bb): Check if we produced valid
	gimple copying and substituting a stmt.  If not, gimplify
	it.

	* g++.dg/tree-ssa/pr28238.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@115517 138bc75d-0d04-0410-961f-82ee72b054a4